# learnmate

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: llm.py  main.py  mermaid_lib.py  paths.py  utils.py
code/: llm.py  main.py  main_joke.py  utils.py
config/: config.yaml  prompt_config.yaml
documentation/: backend_design.md  design.md  multi_agent_design_flowchart.mmd  streamlit_ui_design.md
frontend/: app.py
frontend/components/: sidebar.py  wiki_viewer.py
frontend/utils/: state.py
outputs/: ETL_with_visuals_code-final_wiki_state.json  bitcoin_with_visuals_code-final_wiki_state.json  kafka-research_wiki_state.json  rag-research_wiki_state.json  with_sections-final_wiki_state.json
outputs/How_DNS_Works/: complete_wiki.md  saved_wiki_state.json
outputs/Model_Context_Protocol/: generated_wiki_content.md  saved_wiki_state.json
outputs/Retrieval_Augmented_Generation_RAG/: complete_wiki.md  saved_wiki_state.json
