[project]
name = "learnmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langchain[groq,openai]>=0.3.26",
    "langgraph>=0.5.2",
    "pyjokes>=0.8.3",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.49.1",
]
